-MERGE from TRUNK to 1.4 before 1.6.2-B1